--- a/strategie_zarzadzania.qmd
+++ b/strategie_zarzadzania.qmd
@@ -18,7 +18,11 @@ format:
 #    title-block-banner: true
     title-block-style: default
     title-block-logo: logo.png
-
+ #   code-fold: true
+    code-tools:
+      source: true
+      toggle: false
+      caption: "Pokaż kod"    
     toc: true
     toc-location: left      # ← poprawnie: right lub left
 #    number-sections: true    
@@ -30,26 +34,27 @@ format:
     fig-align: center
     css: styles.css
     link-external-icon: true
-#    link-external-newwindow: true
+    link-external-newwindow: true
     df-print: paged             # ← dodaje wyszukiwarkę
 #bibliography: bibliografia.bib
 #csl: styl.csl
 editor: visual
-
+project:
+  output-dir: docs
 header-includes: |
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 ---
 
 <div style="text-align: center; margin-bottom: 1em;">
-  <a href="https://github.com/twojprofil" target="_blank" title="GitHub">
+  <a href="https://github.com/piotrzamaro" target="_blank" title="GitHub">
     <i class="fab fa-github fa-2x"></i>
   </a>
   &nbsp;
-  <a href="https://twitter.com/twojprofil" target="_blank" title="Twitter">
+  <a href="https://twitter.com/" target="_blank" title="Twitter">
     <i class="fab fa-twitter fa-2x"></i>
   </a>
   &nbsp;
-  <a href="https://linkedin.com/in/twojprofil" target="_blank" title="LinkedIn">
+  <a href="https://linkedin.com/in/piotr_zamaro" target="_blank" title="LinkedIn">
     <i class="fab fa-linkedin fa-2x"></i>
   </a>
 </div>
